# cknittel-util

./: Cargo.toml
.github/workflows/: test_impls.yml  test_util.yml
.vim/: coc-settings.json
builder/: Cargo.toml
builder/src/: error.rs  lib.rs
builder/tests/: builder.rs
enum-extract-impl/: Cargo.toml
enum-extract-impl/src/: error.rs  lib.rs
from-variants/: Cargo.toml
from-variants/src/: error.rs  lib.rs
proc-macro-util/: Cargo.toml
proc-macro-util/src/: collect_tokens.rs  generics.rs  lib.rs
src/: hint.rs  iter.rs  lib.rs  option.rs  result.rs
src/builder/: error.rs  mod.rs
tests/: builder.rs  from_variants.rs
util-impl/: Cargo.toml
util-impl/src/: debug_assert.rs  iter.rs  iter_ones.rs  lib.rs  peekable_stream.rs  tuple.rs  union_find.rs
