[package]
name = "cknittel-util"
version = "0.1.0"
edition = "2024"

[dependencies]
builder = { path = "./builder", optional = true }
from-variants = { path = "./from-variants", optional = true }
proc-macro-util = { path = "./proc-macro-util", optional = true }
util-impl = { path = "./util-impl" }

[features]
builder = ["dep:builder"]
from-variants = ["dep:from-variants"]
macro = ["dep:proc-macro-util"]

[dev-dependencies]
googletest = "0.14.2"
itertools = "0.14.0"
